# PyNativeUI

./: BrainBlast.md  Makefile  README.md  pyproject.toml
examples/: components.py  fault_log.txt  hello_world.py
native_ui/: __init__.py  builders.py  color.py  window.py
native_ui/kit/win/: color.py  component.py  data.py  popup.py  window.py
native_ui/kit/win/styles/: __init__.py  style.py
native_ui/win/: __init__.py  color.py  component.py  window.py
native_ui/win/styles/: __init__.py
playground/: layout.py  win_api.py
